font-optical-sizing applies the wrong variation value https://bugs.webkit.org/show_bug.cgi?id=197528 <rdar://problem/50152854>

Reviewed by Antti Koivisto.

Source/WebCore:

The OpenType spec says in
https://docs.microsoft.com/en-us/typography/opentype/spec/dvaraxistag_opsz

"Scale interpretation: Values can be interpreted as text size, in points."

It turns out that it means "typographic point size" which is equal to CSS pixels, not
CSS points.

There are two parts of the font that are sensitive to optical sizing: variation values and
the trak table. We don't want to set the variation value directly because then the trak table
won't be affected. Instead, we can use kCTFontOpticalSizeAttribute to set both of them together.
We will only do this when the CSS says text-rendering:optimizeLegibility or when the font has
an opsz axis but no STAT table. Otherwise, we won't do anything special, which lets CoreText
handle the default behavior for us. This gives us the same default behavior as the rest of the
system.

Tests: fast/text/variations/optical-sizing-trak-2.html
       fast/text/variations/optical-sizing-trak.html
       fast/text/variations/optical-sizing-units.html
       fast/text/variations/optical-sizing-units-2.html

* platform/graphics/cocoa/FontCacheCoreText.cpp:
(WebCore::FontType::FontType):
(WebCore::preparePlatformFont):
(WebCore::fontWithFamily):
(WebCore::FontCache::systemFallbackForCharacters):
* platform/graphics/cocoa/FontCacheCoreText.h:
* platform/graphics/cocoa/FontFamilySpecificationCoreText.cpp:
(WebCore::FontFamilySpecificationCoreText::fontRanges const):
* platform/graphics/mac/FontCustomPlatformData.cpp:
(WebCore::FontCustomPlatformData::fontPlatformData):

LayoutTests:

* fast/text/variations/optical-sizing-trak-2-expected-mismatch.html: Added.
* fast/text/variations/optical-sizing-trak-2.html: Added.
* fast/text/variations/optical-sizing-trak-expected.html: Added.
* fast/text/variations/optical-sizing-trak.html: Added.
* fast/text/variations/optical-sizing-units-2-expected-mismatch.html: Added.
* fast/text/variations/optical-sizing-units-2.html: Added.
* fast/text/variations/optical-sizing-units-expected.html: Added.
* fast/text/variations/optical-sizing-units.html: Added.
* fast/text/variations/resources/Amstelvar/Amstelvar-Roman-VF104.ttf: Added.
This font havariations/s been approved by the lawyers to add for layout tests.
* fast/text/variations/resources/Amstelvar/COPYRIGHT.md: Added.
* fast/text/variations/resources/Amstelvar/OFL.txt: Added.

Canonical link: https://commits.webkit.org/212174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245598 268f45cc-cd09-0410-ab3c-d52691b4dbfc