LayoutTests/fast/text/variations/resources/Amstelvar/COPYRIGHT.md
@@ -1,0 +1,1 @@
+Copyright 2016 The Amstelvar Project Authors (info@fontbureau.com)
